Formatações (abaixo, acima, BDO)

--- a/formatacaoDeTexto/BDO.html
+++ b/formatacaoDeTexto/BDO.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  É usado para substituir a direção atual do texto. <br />
 
+  <bdo dir="rtl"> O texto fica da direita para a esquerda.</bdo> <br />
+  <bdo dir="ltr"> O texto fica da esquerda para a direita.</bdo> <br />
 </body>
 </html>
