--- a/formatacaoDeTexto/abaixo.html
+++ b/formatacaoDeTexto/abaixo.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  O texto fica um pouco menor e abaixo do texto comum. <br />
+
+  <sub>Exemplo de texto com sub.</sub> <br />
+  Exemplo de texto sem sub.
 
 </body>
 </html>
