--- a/formatacaoDeTexto/acima.html
+++ b/formatacaoDeTexto/acima.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  O texto fica um pouco menor e acima do texto comum. <br />
 
+  <sup>Exemplo de texto com sup</sup> <br />
+  Exemplo de texto sem sup.
 </body>
 </html>
