Fundamentos (citação, itálico, linha horizontal)

--- a/formatacaoDeTexto/citacao.html
+++ b/formatacaoDeTexto/citacao.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  Formatação usada para fazer citação. <br />
+
+  <q>Ser ou não ser, eis a questão.</q> <br />
 
 </body>
 </html>
