--- a/formatacaoDeTexto/italico.html
+++ b/formatacaoDeTexto/italico.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  Formatação usada para deixar o texto em itálico. <br />
+  <i> Utilizado em títulos de livros, filmes, músicas, entre outros.
+    Nomes científicos, palavras em outros idiomas e palavras aos quais se queira dar ênfase.</i> <br />
 
 </body>
 </html>
