--- a/formatacaoDeTexto/linhaHorizontal.html
+++ b/formatacaoDeTexto/linhaHorizontal.html
@@ -5,6 +5,14 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  Insere uma linha horizontal que pode ser usada para separar textos, figuras, etc. <br />
+  <br />
+  <hr color="red"> <!--define a cor-->
+  Segunda-feira
+  <hr size="7" color="black"> <!--define o tamanho--> 
+  Terça-feira
+  <hr width="50%"> <!--define quanto ocupa da tela-->
+  Quarta-feira
 
 </body>
 </html>
