Formatação (negrito, parágrafo)

--- a/formatacaoDeTexto/negrito.html
+++ b/formatacaoDeTexto/negrito.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  Formatação usada para deixar o texto em negrito. <br />
+  <b>Sejam bem-vindos.</b> <br />
 
 </body>
 </html>
