--- a/formatacaoDeTexto/paragrafo.html
+++ b/formatacaoDeTexto/paragrafo.html
@@ -5,6 +5,13 @@
   <meta charset="utf-8" />
 </head>
 <body>
-
+  Formatação usada para criar um parágrafo. <br />
+  <p> 
+    O parágrafo se inicia com uma margem no canto esquerdo da página, em sua primeira linha, indicando o começo,
+    e se encerra com um ponto final.
+  </p>
+  <p>
+    Assim, todas as partes do texto estruturadas da seguinte maneira podem ser consideradas um parágrafo.
+  </p>
 </body>
 </html>
