Formatação (quebra de linha, texto pequeno)

--- a/formatacaoDeTexto/quebraDeLinha.html
+++ b/formatacaoDeTexto/quebraDeLinha.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  Formatação usada para fazer uma quebra de linha na mesma linha do código. <br />
+
+  Não importa o que você decidiu... <br /> O que importa é que isso te faz feliz. <br />
 
 </body>
 </html>
