--- a/formatacaoDeTexto/pequeno.html
+++ b/formatacaoDeTexto/pequeno.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  Formatação que permite que o texto fique menor, porém centralizado. <br />
+
+  <small>Se não puder fazer tudo, faça tudo que puder.</small> <br />
 
 </body>
 </html>
