Formatação (riscado, sublinhado, ruby e rt)

--- a/formatacaoDeTexto/rubyERt.html
+++ b/formatacaoDeTexto/rubyERt.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  Formatação usada para inserir textos com ideogramas, usado frequentemente na cultura asiática. <br />
+
+  <ruby> 平 <rt>PAZ</rt> </ruby> <br />
+  <ruby> 力 <rt>FORÇA</rt> </ruby> <br />
+  <ruby> 生 <rt>VIDA</rt> </ruby> <br />
+  <ruby> 愛 <rt>AMOR</rt> </ruby> <br />
 
 </body>
 </html>
