--- a/formatacaoDeTexto/sublinhado.html
+++ b/formatacaoDeTexto/sublinhado.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  Formatação usada para deixar o texto sublinhado. <br />
+  <ins>A melhor liberdade é quando você se livra do que te faz mal.</ins> <br />
 
 </body>
 </html>
