--- a/formatacaoDeTexto/riscado.html
+++ b/formatacaoDeTexto/riscado.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
 </head>
 <body>
-
+  Formatação que permite que o texto fique riscado. <br />
+  <del>O texto pode ser riscado, como se fosse uma rasura.</del> <br />
 </body>
 </html>
