Formatação (span, títulos)

--- a/formatacaoDeTexto/span.html
+++ b/formatacaoDeTexto/span.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  A TAG é usada para fazer a formatação em uma parte específica do texto. Apropriada para ser usada em códigos pequenos. <br />
+
+  <p>Curso com tutorial de <span style="color:blue">HTML</span> e <span style="color:red">CSS</span></p>
 
 </body>
 </html>
