--- a/formatacaoDeTexto/titulos.html
+++ b/formatacaoDeTexto/titulos.html
@@ -5,6 +5,20 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  Formatação para criar títulos e subtítulos. Os tamanhos vão de h1 a h6, o tamanho segue em ordem decrescente.
+
+  <h1>
+    Vacinação infantil
+  </h1>
+  <h2>
+    Ministério vai comprar mais 10 milhões de doses da CoronaVac.
+  </h2>
+  <h3>
+    Doses serão compradas do Instituto Butantan.
+  </h3>
+  <h4>
+    Anvisa aprovou na semana passada uso da Coronavac para crianças a partir de 6 anos.
+  </h4>
 
 </body>
 </html>
