--- a/apresentacaoDeDados/listasDeDescricao.html
+++ b/apresentacaoDeDados/listasDeDescricao.html
@@ -5,6 +5,25 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  Lista ordenada por números, números romanos ou letras. <br />
+
+  <ol>Lista ordenada:
+    <li>Item número um.</li>
+    <li>Item número dois.</li>
+    <li>Item número três.</li>
+   </ol> <br />
+
+   <ol type="A">Lista ordenada:
+    <li>Item número um.</li>
+    <li>Item número dois.</li>
+    <li>Item número três.</li>
+   </ol> <br />
+
+   <ol type="I">Lista ordenada:
+    <li>Item número um.</li>
+    <li>Item número dois.</li>
+    <li>Item número três.</li>
+   </ol>
 
 </body>
 </html>
