Lista não ordenada

--- a/apresentacaoDeDados/listasNaoOrdenadas.html
+++ b/apresentacaoDeDados/listasNaoOrdenadas.html
@@ -5,6 +5,14 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  A lista não ordenada é usada para listar itens por marcadores, sem ter importância a sequência. <br />
+
+
+  <ul>Lista não ordenada:
+    <li>Item número um.</li>
+    <li>Item número dois.</li>
+    <li>Item número três.</li>
+  </ul>
 
 </body>
 </html>
