Lista de descrição

--- a/apresentacaoDeDados/listasDeDescricao.html
+++ b/apresentacaoDeDados/listasDeDescricao.html
@@ -5,25 +5,22 @@
   <meta charset="utf-8" />
 </head>
 <body>
-  Lista ordenada por números, números romanos ou letras. <br />
+  Pode ser usada para criar uma lista que apresenta um termo e várias definições,
+   ou criar uma lista que apresenta vários termos e apenas uma definição. <br />
+  
+  <dl>Lista de descrição:
+    <dt>Google Chrome</dt>
+    <dt>Internet Explorer</dt>
+    <dt>Mozila Firefox</dt>
+    <dd>= Navegadores de internet</dd>
+  </dl> <br />
 
-  <ol>Lista ordenada:
-    <li>Item número um.</li>
-    <li>Item número dois.</li>
-    <li>Item número três.</li>
-   </ol> <br />
-
-   <ol type="A">Lista ordenada:
-    <li>Item número um.</li>
-    <li>Item número dois.</li>
-    <li>Item número três.</li>
-   </ol> <br />
-
-   <ol type="I">Lista ordenada:
-    <li>Item número um.</li>
-    <li>Item número dois.</li>
-    <li>Item número três.</li>
-   </ol>
+  <dl>Lista de descrição:
+    <dt>Banco =</dt>
+    <dd>Instituição bancária</dd>
+    <dd>Lugar para se sentar</dd>
+    <dd>Do verbo "bancar"</dd>
+  </dl>
 
 </body>
 </html>
