--- a/apresentacaoDeDados/meter.html
+++ b/apresentacaoDeDados/meter.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  O recurso "meter" é usado para representar uma medida. <br />
+
+  <meter value="30" max="100"></meter> <br />
+  <meter value="50" max="100"></meter> <br />
+  <meter value="70" max="100"></meter> <br />
+  <meter value="90" max="100"></meter> <br />
 
 </body>
 </html>
