--- a/apresentacaoDeDados/progress.html
+++ b/apresentacaoDeDados/progress.html
@@ -5,6 +5,13 @@
   <meta charset="utf-8" />
 </head>
 <body>
+  O recurso "progress" é usado para representar o progresso de uma tarefa. <br />
+
+  <progress value="10" max="100"></progress> <br />
+  <progress value="30" max="100"></progress> <br />
+  <progress value="50" max="100"></progress> <br />
+  <progress value="70" max="100"></progress> <br />
+  <progress value="90" max="100"></progress> <br />
 
 </body>
 </html>
