--- a/apresentacaoDeDados/tabelas.html
+++ b/apresentacaoDeDados/tabelas.html
@@ -6,5 +6,56 @@
 </head>
 <body>
 
+  Uma formatação para exibir os dados tabulados. As linhas e colunas são definidas no próprio código. <br />
+
+  <br /><table>
+    <thead> <!-- cabeçalho da tabela -->
+    <tr>
+      <th>Nome</th>
+      <th>Sobrenome</th>
+      <th>Idade</th>
+    </tr>
+    </thead>
+    <tbody> <!-- corpo da tabela -->
+    <tr>
+      <td>João</td>
+      <td>Silva</td>
+      <td>28</td>
+    </tr>
+    <tr>
+      <td>Maria</td>
+      <td>Souza</td>
+      <td>23</td>
+    </tr>
+    </tbody>
+  </table> <br />
+
+  <br /><table>
+    <thead>
+    <tr>
+      <th>País</th>
+      <th>Capital</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>Egito</td>
+      <td>Cairo</td>
+    </tr>
+    <tr>
+      <td>França</td>
+      <td>Paris</td>
+    </tr>
+    <tr>
+      <td>Itália</td>
+      <td>Roma</td>
+    </tr>
+    <tr>
+      <td>Noruega</td>
+      <td>Oslo</td>
+    </tr>
+    </tbody>
+  </table>
+
 </body>
 </html>
