--- a/formulario/inputDeTexto.html
+++ b/formulario/inputDeTexto.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Input de text</title>
+  <title>Input de texto</title>
   <meta charset="utf-8" />
   <form accept-charset="utf-8"></form>
 </head>
