--- a/multimidia/imagens.html
+++ b/multimidia/imagens.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Label</title>
+  <title>Imagens</title>
   <meta charset="utf-8" />
   <form accept-charset="utf-8"></form>
 </head>
