--- a/semantica/address.html
+++ b/semantica/address.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Figure e FigureCaption</title>
+  <title>Address</title>
   <meta charset="utf-8" />
   <form accept-charset="utf-8"></form>
 </head>
