--- a/semantica/detailsESummary.html
+++ b/semantica/detailsESummary.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Figure e FigureCaption</title>
+  <title>Detais e Summary</title>
   <meta charset="utf-8" />
   <form accept-charset="utf-8"></form>
 </head>
