--- a/semantica/main.html
+++ b/semantica/main.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Footer</title>
+    <title>Main</title>
     <meta charset="utf-8" />
     <form accept-charset="utf-8"></form>
 </head>
