--- a/estruturandoPagina/estrutura.html
+++ b/estruturandoPagina/estrutura.html
@@ -5,6 +5,7 @@
     <title>Minha loja</title>
     <meta charset="utf-8" />
     <form accept-charset="utf-8"></form>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
