--- a/cores/cores.html
+++ b/cores/cores.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Links</title>
+  <title>Cores</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="cores.css" />
 </head>
