--- a/cores/cores.html
+++ b/cores/cores.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="cores.css" />
 </head>
 <body>
+  Essa formatação permite alterar as cores do texto, da margem e do fundo.
     <h4>Meu Texto</h4>
 
     <div>Meu Texto</div>
