--- a/fontes/texto.html
+++ b/fontes/texto.html
@@ -14,5 +14,8 @@
     <div class="ex5">Esse parágrafo foi feito com text-align (justify).</div>
     <div class="ex6">Esse parágrafo foi feito com text-decoration (line-through).</div>
     <div class="ex7">Esse parágrafo foi feito com text-decoration (underline).</div>
+    <div class="ex8">Esse parágrafo foi feito com text-transform (uppercase).</div>
+    <div class="ex9">Esse parágrafo foi feito com  text-transform (capitalize).</div>
+    <div class="ex10">Esse parágrafo foi feito com Text Shadow</div>
 </body>
 </html>
