--- a/formatandoTextos/letrasPalavrasELinhas..html
+++ b/formatandoTextos/letrasPalavrasELinhas..html
@@ -3,7 +3,7 @@
 <head>
   <title>Textos</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="letrasPalavrasELinhas..css" />
+  <link rel="stylesheet" href="letrasPalavrasELinhas.css" />
 </head>
 <body>
     Nessa formatação é possível formatar e estilizar textos.
