--- a/boxModel/boxModel.html
+++ b/boxModel/boxModel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Textos</title>
+  <title>Box Model</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="boxModel.css" />
 </head>
