--- a/posicionamento/zIndex.html
+++ b/posicionamento/zIndex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Posicionamento</title>
+  <title>Z Index</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="zIndex.css" />
 </head>
