--- a/posicionamento/float.html
+++ b/posicionamento/float.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="float.css" />
 </head>
 <body>
-    Essa formatação permite que o texto acompanhe a imagem.
+    Essa formatação permite que o texto acompanhe a imagem, ou seja, a imagem fica flutuante.
     <p>
         <img src="logo.png" width="95" height="84" />
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, fugit, ipsam reprehenderit porro aperiam esse quibusdam ratione excepturi amet est.</p>
