--- a/posicionamento/clear.html
+++ b/posicionamento/clear.html
@@ -6,13 +6,15 @@
   <link rel="stylesheet" href="clear.css" />
 </head>
 <body>
-    Essa formatação impede a flutuação do elemento.
+    Essa formatação impede a flutuação de um elemento.
     <p>
-        <div class="wrapper">
-            <p class="black">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Phasellus sit amet diam. Duis mattis varius dui. Suspendisse eget dolor.</p>
-            <p class="red">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-            <p class="left">This paragraph clears left.</p>
-        </div>
+        <img src="logo.png" width="95" height="84" />
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, fugit, ipsam reprehenderit porro aperiam esse quibusdam ratione excepturi amet est.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, fugit, ipsam reprehenderit porro aperiam esse quibusdam ratione excepturi amet est.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, fugit, ipsam reprehenderit porro aperiam esse quibusdam ratione excepturi amet est.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, fugit, ipsam reprehenderit porro aperiam esse quibusdam ratione excepturi amet est.
+        <p class="clear">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, fugit, ipsam reprehenderit porro aperiam esse quibusdam ratione excepturi amet est.</p>
+    </p>
 
 </body>
 </html>
