--- a/projeto/index.html
+++ b/projeto/index.html
@@ -49,8 +49,8 @@
   </div>
 
   <div class="caixa-meio">
-    <h2 id="titulo-meio">O lugar</h2>
-    <p class="paragrafo-meio">Um trem antigo que rodou o mundo agora estaciona em Brasília
+    <h2 id="titulo-meio">O Lugar</h2>
+    <p class="paragrafo-meio">Um trem antigo que rodou o mundo agora estaciona em Brasília.
       Um pub revolucionário para os amantes de antiguidades, viagens, comida boa e cerveja gelada.
     </p>
   </div>
@@ -58,7 +58,7 @@
 
   <div class="caixa-inferior">
     <h2 id="titulo-inferior">Nossos Drinks</h2>
-    <p class="paragrafo-inferior">Assim como o trem, nossos mestres rodaram o mundo procurando o que há de mais sofisticado para os nossos clientes.
+    <p class="paragrafo-inferior">Assim como o trem, nossos mestres rodaram o mundo procurando o que há de mais gostoso e sofisticado para os nossos clientes.
       Aqui você poderá apreciar diversos drinks e cervejas.
     </p>
   </div>
