--- a/projeto/index.html
+++ b/projeto/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="styles.css" />
   <title>Trem na Web</title>
   <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
 </head>
@@ -62,10 +62,8 @@
 
   <div class="caixa-inferior">
     <h2 id="titulo-inferior">Nossos Drinks</h2>
-    <div class="drink"></div>
     <p class="paragrafo-inferior">Assim como o trem, nossos mestres rodaram o mundo procurando o que há de mais gostoso
-      e sofisticado para os nossos clientes.
-      Aqui você poderá apreciar diversos drinks e cervejas.
+      e sofisticado para os nossos clientes. Aqui você poderá apreciar diversos drinks e cervejas.
     </p>
   </div>
 
